# InameVR

./: .gitignore  CMakeLists.txt  README.md
diykit/: CMakeLists.txt  README.md
diykit/configrationtool/: README.md
diykit/configrationtool/source/: camerascreen.py  main.py  mainold.py  settings.iname  values.py
diykit/include/: EasyProgram.h  EasyService.h  TrackerCamera.h
diykit/src/: EasyProgram.cpp  EasyService.cpp  TrackerCamera.cpp  main.cpp
include/: InameComponent.h  InameProgram.h  common.h  log.h
src/: InameComponent.cpp  InameProgram.cpp  log.cpp
